# gala-deck

./: .gitignore  .gitmodules  LICENSE  README.md  app.py  pyproject.toml
.github/workflows/: pull_mcp.yml
assets/: cards.json  database.py  models.py
src/: __init__.py  chat_handler.py  config.py  errors.py  mcp_client.py
src/test/integration/: test_mcp.py
src/tests/: test_mcp.py  test_node_output.py
