[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gala-deck"
version = "0.1.0"
description = "A deck management application"
readme = "README.md"
license = {text = "LICENSE"}
requires-python = ">=3.11"
dependencies = [
    "streamlit>=1.0.0",
    "anthropic>=0.3.0",
    "sqlalchemy>=2.0.0",
    "mcp>=1.25.0"
]

[tool.uv]
python = "3.11"